templates/waldur_template.yaml
---
# Source: waldur/templates/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: waldur-mastermind-api
  labels:
    app.kubernetes.io/name: waldur
    helm.sh/chart: waldur-6.6.9
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: waldur-mastermind-api
---
# Source: waldur/templates/service-homeport.yml
apiVersion: v1
kind: Service
metadata:
  name: waldur-homeport
  labels:
    app.kubernetes.io/name: waldur
    helm.sh/chart: waldur-6.6.9
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: waldur-homeport
---
# Source: waldur/templates/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waldur-mastermind-api
  labels:
    app.kubernetes.io/name: waldur
    helm.sh/chart: waldur-6.6.9
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  progressDeadlineSeconds: 2400
  replicas: 1
  selector:
    matchLabels:
      app: waldur-mastermind-api
  template:
    metadata:
      labels:
        app: waldur-mastermind-api
    spec:
      
      
      containers:
        - name: waldur-mastermind-api
          image: docker.io/opennode/waldur-mastermind:6.6.9
          imagePullPolicy: Always
          args:
            - "mastermind"
          livenessProbe:
            exec:
              command:
                - pgrep
                - gunicorn
            initialDelaySeconds: 5 # it takes around 5 sec to spawn Gunicorn processes
            periodSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              port: 80
              path: /api/configuration/
            initialDelaySeconds: 50 # it takes around a minute to completely start UWSGI server
            periodSeconds: 10
            failureThreshold: 100 # Mastermind can wait long for DB migrations
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            
            {}
            
          volumeMounts:
            - name: api-override
              mountPath: /etc/waldur/override.conf.py
              subPath: override.conf.py
            - name: api-celery
              mountPath: /etc/waldur/celery.conf
              subPath: celery.conf
            - name: config-features-json
              mountPath: /etc/waldur/features.json
              subPath: features.json
            - name: config-auth-yaml
              mountPath: /etc/waldur/auth.yaml
              subPath: auth.yaml
            - name: config-permissions-override-yaml
              mountPath: /etc/waldur/permissions-override.yaml
              subPath: permissions-override.yaml
            - name: icons
              mountPath: /etc/waldur/icons
            
            
            
            
            
      volumes:
      - name: api-override
        configMap:
          name: api-override-config
      - name: api-celery
        configMap:
          name: api-celery-config
      - name: config-features-json
        configMap:
          name: mastermind-config-features-json
      - name: config-auth-yaml
        configMap:
          name: mastermind-config-auth-yaml
      - name: config-permissions-override-yaml
        configMap:
          name: mastermind-config-permissions-override-yaml
      - name: icons
        configMap:
          name: icons-config
---
# Source: waldur/templates/deployment-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waldur-mastermind-beat
  labels:
    app.kubernetes.io/name: waldur
    helm.sh/chart: waldur-6.6.9
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  progressDeadlineSeconds: 2400
  replicas: 1
  selector:
    matchLabels:
      app: waldur-mastermind-beat
  template:
    metadata:
      labels:
        app: waldur-mastermind-beat
    spec:
      
      
      containers:
        - name: waldur-mastermind-beat
          image: docker.io/opennode/waldur-mastermind:6.6.9
          imagePullPolicy: Always
          args:
            - "beat"
          resources:
            
            {}
            
          volumeMounts:
            - name: api-override
              mountPath: /etc/waldur/override.conf.py
              subPath: override.conf.py
            - name: api-celery
              mountPath: /etc/waldur/celery.conf
              subPath: celery.conf
            
            
      volumes:
      - name: api-override
        configMap:
          name: api-override-config
      - name: api-celery
        configMap:
          name: api-celery-config
      - name: config-features-json
        configMap:
          name: mastermind-config-features-json
      - name: config-auth-yaml
        configMap:
          name: mastermind-config-auth-yaml
      - name: config-permissions-override-yaml
        configMap:
          name: mastermind-config-permissions-override-yaml
      - name: constance-settings-yaml
        configMap:
          name: mastermind-support-yaml
      
      - name: waldur-mastermind-template
        configMap:
          name: mastermind-template-config
---
# Source: waldur/templates/deployment-homeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waldur-homeport
  labels:
    app.kubernetes.io/name: waldur
    helm.sh/chart: waldur-6.6.9
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waldur-homeport
  template:
    metadata:
      labels:
        app: waldur-homeport
    spec:
      
      
      containers:
        - name: waldur-homeport
          image: docker.io/opennode/waldur-homeport:6.6.9
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /scripts/configs/config.json
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              port: 80
              path: /scripts/configs/config.json
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            {}
---
# Source: waldur/templates/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waldur-mastermind-worker
  labels:
    app.kubernetes.io/name: waldur
    helm.sh/chart: waldur-6.6.9
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "6.6.9"
    app.kubernetes.io/managed-by: Helm
spec:
  progressDeadlineSeconds: 2400
  replicas: 1
  selector:
    matchLabels:
      app: waldur-mastermind-worker
  template:
    metadata:
      labels:
        app: waldur-mastermind-worker
    spec:
      
      
      containers:
        - name: waldur-mastermind-worker
          image: docker.io/opennode/waldur-mastermind:6.6.9
          imagePullPolicy: Always
          args:
            - "worker"
          # startup probe: check if there are no pending migrations
          livenessProbe:
            exec:
              command:
                - "/bin/bash"
                - "-c"
                - "celery -A waldur_core.server inspect -d celery@$HOSTNAME ping"
            initialDelaySeconds: 15
            periodSeconds: 25
            timeoutSeconds: 20
          readinessProbe:
            exec:
              command:
                - "/bin/bash"
                - "-c"
                - "celery -A waldur_core.server inspect -d celery@$HOSTNAME ping"
            initialDelaySeconds: 20
            periodSeconds: 25
            timeoutSeconds: 20
          resources:
            
            {}
            
          volumeMounts:
            - name: api-override
              mountPath: /etc/waldur/override.conf.py
              subPath: override.conf.py
            - name: api-celery
              mountPath: /etc/waldur/celery.conf
              subPath: celery.conf
            - name: config-features-json
              mountPath: /etc/waldur/features.json
              subPath: features.json
            - name: config-auth-yaml
              mountPath: /etc/waldur/auth.yaml
              subPath: auth.yaml
            - name: config-permissions-override-yaml
              mountPath: /etc/waldur/permissions-override.yaml
              subPath: permissions-override.yaml
            
            
            
            
      volumes:
      - name: api-override
        configMap:
          name: api-override-config
      - name: api-celery
        configMap:
          name: api-celery-config
      - name: config-features-json
        configMap:
          name: mastermind-config-features-json
      - name: config-auth-yaml
        configMap:
          name: mastermind-config-auth-yaml
      - name: config-permissions-override-yaml
        configMap:
          name: mastermind-config-permissions-override-yaml
---
# Source: waldur/templates/ingress-api-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-admin
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,sentry-trace,baggage
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
    
    
spec:
  rules:
  - host: waldur.local
    http:
      paths:
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: waldur-mastermind-api
            port:
              number: 80
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: waldur-mastermind-api
            port:
              number: 80
  
  tls:
  - hosts:
    - waldur.local
    
    secretName: api-certificate
---
# Source: waldur/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,sentry-trace,baggage
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
    
    
spec:
  rules:
  - host: waldur.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: waldur-mastermind-api
            port:
              number: 80
      - path: /api-auth
        pathType: Prefix
        backend:
          service:
            name: waldur-mastermind-api
            port:
              number: 80
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: waldur-mastermind-api
            port:
              number: 80
      - path: /apidocs
        pathType: Prefix
        backend:
          service:
            name: waldur-mastermind-api
            port:
              number: 80
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: waldur-mastermind-api
            port:
              number: 80
      - path: /health-check
        pathType: Prefix
        backend:
          service:
            name: waldur-mastermind-api
            port:
              number: 80
  
  tls:
  - hosts:
    - waldur.local
    
    secretName: api-certificate
---
# Source: waldur/templates/ingress-homeport.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeport-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
    
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,sentry-trace,baggage
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: base-uri 'self'; object-src 'none'; media-src 'none'; script-src 'self' sentry.opnd.org ; style-src 'self' 'unsafe-inline'; img-src 'self' *.tile.openstreetmap.org waldur.local blob: data: ; connect-src 'self' waldur.local  nominatim.openstreetmap.org:443 sentry.opnd.org:443 sentry.opnd.org:80; font-src 'self' data: ; frame-src 'none'; frame-ancestors 'none'";
    
spec:
  rules:
  - host: waldur.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: waldur-homeport
            port:
              number: 80
  
  tls:
  - hosts:
    - waldur.local
    
    secretName: homeport-certificate
